# context_packer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  context-packer-ENHANCED.md
.ai/: ARCHITECTURE.md  CONVENTIONS.md  TOOLS.md
src/: cli.rs  error.rs  main.rs
src/cache/: mod.rs
src/format/: mod.rs
src/pack/: budget.rs  mod.rs  packer.rs
src/rank/: mod.rs
src/tokens/: mod.rs
