[package]
name = "context-packer"
version = "0.1.0"
edition = "2021"
description = "Smart context assembly for AI agents - packs relevant code within token budgets"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Token counting - using tiktoken for simplicity (works for multiple models)
tiktoken-rs = "0.6"

# File operations
walkdir = "2.4"
sha2 = "0.10"

# Configuration
toml = "0.8"
directories = "5.0"

# Cache
bincode = "1.3"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
